# MABS

./: .gitignore  pyproject.toml  setup.py
aproach1/: notebook.ipynb
aproach1/src/: input.py  logger.py  main.py
aproach1/src/factories/: bandit_factory.py  strategy_factory.py
aproach1/src/libs/strategies/: epsilon_greedy_strategy.py  greedy_strategy.py  random_strategy.py
aproach1/src/libs/utils/: plot.py
config/: config.yaml
libs/strategies/: base_strategy.py
src/: app.py  config_reader.py  experiment.py  logger.py  main.py  tree
src/bandits/: base_bandit.py  gaussian_bandit.py  normal_bandit.py  random_bandit.py
src/cli/: main.py
src/config/: default_config.yaml
src/config/bandit_profiles/: normal.yaml
src/config/test/: fast_test.yaml  high_trials.yaml  low_arms.yaml
src/factories/: bandit_factory.py  exeptions.py  strategy_factory.py
src/libs/bandits/: base_bandit.py  bernoulli_bandit.py  gaussian_bandit.py
src/libs/strategies/: epsilon_greedy_strategy.py  thompson_sampling_strategy.py  ucb_strategy.py
src/mabs.egg-info/: PKG-INFO
src/src.egg-info/: PKG-INFO
src/strategies/: backprop_strategy.py  base_strategy.py  epsilon_greedy_strategy.py  thompson_sampling_strategy.py  ucb_strategy.py
src/tests/: test_bandit_factory.py  test_experiment.py  test_strategy_factory.py
src/ui/: app.py
src/utils/: auto_import.py  config_loader.py
