[project]
name = "src"
version = "0.1.0"
description = "A modular bandit system"
authors = [
    { name="Javad", email="mohamadmorady412@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "streamlit",
    "numpy",
    "pandas",
    "matplotlib"
]

[tool.setuptools]
packages = ["mabs"]
package-dir = {"" = "src"}

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
